--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name : Add permission to gradle 
+        run : chmod +x ./gradlew
       - name: Build test and build docker image
         run: |
           export SHELL=/bin/bash
