--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
-
+    testImplementation 'org.junit.platform:junit-platform-suite-engine:1.8.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // This dependency is used by the application.
