add jacoco plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'jacoco'
+
 }
 
 repositories {
@@ -23,6 +25,27 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "failed", "skipped"
+    }
+    finalizedBy jacocoTestReport
+}
+
+jacoco {
+    toolVersion = "0.8.9"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = false
+        csv.required = true
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
