--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -18,6 +18,8 @@ jobs:
         run: |
           export SHELL=/bin/bash
           ./gradlew test
+      - name: Build Jacoco test report
+        run: ./gradlew build jacocoTestReport 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
         with:
